--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -21,8 +21,10 @@
         <td><%= meeting.start_time %></td>
         <td><%= meeting.end_time %></td>
         <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_employee.id == @meeting.employee.id %>
+          <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
+          <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
