added will_paginate, will_paginate-bootstrap, meta_request to gemfile

--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -29,5 +29,5 @@
 </table>
 
 <br>
-
+<%= will_paginate @meetings, renderer: renderer: BootstrapPagination::Rails %>
 <%= link_to 'New Meeting', new_meeting_path %>
