adding some styling, and structure to all meetings

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 //You need to now manually import every other scss file.
+.center{
+  text-align: center;
+};
+.pull-right{
+  margin-right: 20px;
+};
+.margin-top{
+  margin-top: 15px;
+};
