--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Meeting</h1>
+<div class="container">
+  <div class="row">
 
-<%= render 'form' %>
+    <h2>Editing Meeting</h2>
+      <%= render 'form' %>
 
-<%= link_to 'Show', @meeting %> |
-<%= link_to 'Back', meetings_path %>
+      <%= link_to 'Show', @meeting %> |
+      <%= link_to 'Back', meetings_path %>
+  </div>
+</div>
