--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,33 +1,37 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <p id="notice"><%= notice %></p>
 
-<h1>Listing Meetings</h1>
+    <h1>Listing Meetings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Agenda</th>
-      <th>Start time</th>
-      <th>End time</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Agenda</th>
+          <th>Start time</th>
+          <th>End time</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @meetings.each do |meeting| %>
-      <tr>
-        <td><%= meeting.title %></td>
-        <td><%= meeting.agenda %></td>
-        <td><%= meeting.start_time %></td>
-        <td><%= meeting.end_time %></td>
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @meetings.each do |meeting| %>
+          <tr>
+            <td><%= link_to meeting.title, meeting %></td>
+            <td><%= meeting.agenda %></td>
+            <td><%= meeting.start_time %></td>
+            <td><%= meeting.end_time %></td>
+            <td><%= link_to 'Show', meeting %></td>
+            <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
+            <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
+    <br>
 
-<%= link_to 'New Meeting', new_meeting_path %>
+    <%= link_to 'New Meeting', new_meeting_path, class: "btn btn-default" %>
+  </div>
+</div>
