--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Meeting</h1>
+<div class="container">
+  <div class="row">
 
-<%= render 'form' %>
+    <h2>New Meeting</h2>
 
-<%= link_to 'Back', meetings_path %>
+    <%= render 'form' %>
+  </div>
+</div>
