--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,15 +34,20 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/employees/sign_in">Log In</a></li>
-        <li><a href="/employees/sign_up">Sign Up</a></li>
+        <% if employee_signed_in? %>
+          <li><%= link_to 'Log Out', destroy_employee_session_path, :method => :delete %></li>
+        <% else %>
+          <li><%= link_to 'Log In', "/employees/sign_in" %></li>
+          <li><a href="/employees/sign_up">Sign Up</a></li>
+        <% end %>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <!-- <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p> -->
 <%= yield %>
 
 </body>
