--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/rooms">CSR2000</a>
+      <a class="navbar-brand" href="/rooms">CRS2000</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
