--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,24 +1,32 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <p id="notice" class="alert"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @meeting.title %>
-</p>
+    <h2><%= @meeting.title.capitalize %></h2>
 
-<p>
-  <strong>Agenda:</strong>
-  <%= @meeting.agenda %>
-</p>
+    <h3>Agenda</h3>
+    <div class="well">
+      <p><%= @meeting.agenda %></p>
+    </div>
 
-<p>
-  <strong>Start time:</strong>
-  <%= @meeting.start_time %>
-</p>
-
-<p>
-  <strong>End time:</strong>
-  <%= @meeting.end_time %>
-</p>
-
-<%= link_to 'Edit', edit_meeting_path(@meeting) %> |
-<%= link_to 'Back', meetings_path %>
+    <div class="col-md-6">
+      <h3>Attendees</h3>
+      <ul>
+        <li><%= link_to @meeting.employee.name, @meeting.employee %></li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <h3>Meeting details</h3>
+        <ul>
+          <li><strong>Location:</strong> <%= link_to @meeting.room.name, @meeting.room %></li>
+          <li><strong>Start time:</strong> <%= @meeting.start_time %></li>
+          <li><strong>End time:</strong> <%= @meeting.end_time %></li>
+          <li><strong>Total time:</strong> <%= @meeting.end_time - @meeting.start_time %> hour(s) </li>
+        </ul>
+    </div>
+  </div>
+  <div class="row">
+    <%= link_to 'Edit', edit_meeting_path(@meeting), class: "btn btn-success" %>
+    <%= link_to 'Back', meetings_path, class: "btn btn-default" %>
+  </div>
+</div>
