--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -9,3 +9,13 @@
    margin-right: 1em;
   }
 }
+
+.room-image {
+  width: 200px;
+  height: 200px;
+}
+
+.room-image img {
+  width: 100px;
+  height: auto;
+}
