--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,19 +5,21 @@ It should show the title, and the photo for each room. -->
 <div class="container">
   <div class="row">
     <h2>The <%= @room.name %> Room</h2>
-    <img src="http://cdn.home-designing.com/wp-content/uploads/2009/06/large-meeting-room.jpg">
+    <div class="room-image">
+      <img src="http://cdn.home-designing.com/wp-content/uploads/2009/06/large-meeting-room.jpg">
+    </div>
     <div class="col-md-6">
       <h3>Meetings</h3>
       <% @room.meetings.each do |meeting|%>
       <ul>
-        <li><%= meeting.title %></li>
+        <li><%= link_to meeting.title, meeting %></li>
 
       </ul>
       <% end %>
     </div>
     <div class="col-md-6">
       <h3>Details</h3>
-      <p><strong>Location: </strong> <%= @room.location %></p>
+      <p><strong>Location: </strong> <%=@room.location%></p>
       <p><strong>Occupancy: </strong><%= @room.max_occupancy %></p>
       <p><strong>Room Number: </strong><%= @room.room_number%></p>
     </div>
