--- a/app/views/meeting_mailer/meeting_cancelled.txt.erb
+++ b/app/views/meeting_mailer/meeting_cancelled.txt.erb
@@ -1,21 +1,15 @@
-Hello <%=@user%>,
+Hello <%=@employee.name%>,
 
-  This email is to confirm that you scheduled the following meeting:
+This email is to inform you that the following meeting has been cancelled:
 
     Title: <%= @meeting.title %>
     Location: <%= @meeting.location %>
     Start Time: <%= @meeting.start_time %>
     End Time: <%= @meeting.end_time %>
     Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>)
-    Attendees:
-      <% @meeting.employees.each do |employee| %>
-        <%= employee.name %>
-      <% end %>
 
 
-
-
-Please be sure to arrive on time. Thank you
+Contact your supervisor with any questions you may have.
 
 Sincerely,
 <%= @meeting.employee.company.name %> Management
