added email template for changed meeting

--- a/app/views/meeting_mailer/meeting_cancelled.txt.erb
+++ b/app/views/meeting_mailer/meeting_cancelled.txt.erb
@@ -9,7 +9,7 @@ This email is to inform you that the following meeting has been cancelled:
     Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>)
 
 
-Contact your supervisor with any questions you may have.
+Contact your supervisor with any questions.
 
 Sincerely,
 <%= @meeting.employee.company.name %> Management
