--- a/app/views/meeting_mailer/meeting_scheduled.html.erb
+++ b/app/views/meeting_mailer/meeting_scheduled.html.erb
@@ -15,7 +15,7 @@
     </li>
   </ul>
 </p>
-<p>Please be sure to arrive on time. Thank you </p>
+<p>Please be sure to arrive on time. Thank you.</p>
 
 <p>Sincerely,</p>
 <p><%= @meeting.employee.company.name %> Management</p>
