removed <strong> tags from .txt file

--- a/app/views/meeting_mailer/meeting_changed.txt.erb
+++ b/app/views/meeting_mailer/meeting_changed.txt.erb
@@ -1,6 +1,6 @@
 Hello <%=@employee.name%>,
 
-This email is to inform you that the <strong><%= @meeting.title %></strong> meeting has changed. The meeting details are now as follows:
+This email is to inform you that the <%= @meeting.title %> meeting has changed. The meeting details are now as follows:
 
     Title: <%= @meeting.title %>
     Location: <%= @meeting.location %>
