--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -5,15 +5,21 @@
     </div>
   </div>
   <div class="row">
-    <div class='col-md-6 panel panel-default'>
+    <div class='col-md-3 panel panel-default'>
       <div class="panel-heading"><h3 class='panel-title'>Total Employees</h3></div>
       <div class='panel-body'><%= @total_employees %></div>
     </div>
-    <div class='col-md-6'>
-      <div class='col-md-6 panel panel-default'>
+    <div class='col-md-3 panel panel-default'>
       <div class="panel-heading"><h3 class='panel-title'>Total Rooms</h3></div>
       <div class='panel-body'><%= @total_rooms %></div>
     </div>
+    <div class='col-md-3 panel panel-default'>
+      <div class="panel-heading"><h3 class='panel-title'>Total Meetings Today</h3></div>
+      <div class='panel-body'><%= @today_meetings.count %></div>
+    </div>
+    <div class='col-md-3 panel panel-default'>
+      <div class="panel-heading"><h3 class='panel-title'>All Scheduled Meetings</h3></div>
+      <div class='panel-body'><%= @all_future_meetings.count %></div>
     </div>
   </div>
 </div>
