--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,19 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-//You need to now manually import every other scss file.
+@import 'dataTables/jquery.dataTables';
 
-*= require dataTables/jquery.dataTables
+.report-container {
+  width: 95%;
+  padding: 20px;
+  margin-left: auto;
+  margin-right:auto;
+  border: 1px solid orange;
+  background-color: #eeeeee;
+}
+
+.report-inner {
+  padding: 20px;
+  margin: 40px;
+  border: 1px solid orange;
+  background-color: #eeeeee;
+}
