--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -3,4 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .comp-name-dash {
   text-align: center;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+.dash-field {
+  text-align: center;
+  margin-bottom: 15px;
 }
