--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import 'scaffolds.scss'
+@import 'scaffolds.scss';
 
 //You need to now manually import every other scss file.
 .center{
