--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+
+<% flash.each do |name, msg| %>
+<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+<% end %>
+
+<% if user_signed_in? %>
+  <ul>
+    <li><%= link_to 'Account', edit_employee_registration_path %></li>
+    <li><%= link_to 'Sign out', destroy_employee_session_path, :method => :delete %></li>
+  </ul>
+<% else %>
+  <ul>
+    <li><%= link_to 'Sign up', new_employee_registration_path %></li>
+    <li><%= link_to 'Sign in', new_employee_session_path %></li>
+  </ul>
+<% end %>
+
 <%= yield %>
 
 </body>
