stashing changes before merge

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import 'rooms'
-@import 'scaffolds.scss'
+@import 'rooms.scss';
+@import 'scaffolds.scss';
