--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -27,8 +27,7 @@ It should show the title, and the photo for each room. -->
       <p><strong>Location: </strong> <%=@room.location%></p>
       <p><strong>Occupancy: </strong><%= @room.max_occupancy %></p>
       <p><strong>Room Number: </strong><%= @room.room_number%></p>
-<!--       <p><strong>Amenities: </strong><%= @room.amenities %></p>
- -->    </div>
+</div>
   </div>
 
   <!-- <div class="row admin">
