added search capability for rooms

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
+<div class="well pull-right">
+  <form action='/search/rooms' method='GET'>
+    <input type='text' name='search'/>
+    <input type='submit' value='Search' class="btn btn-primary" />
+  </form>
+</div>
 
 <h1>Listing Rooms</h1>
 
