--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -20,9 +20,9 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Agenda</th>
-      <th>Start time</th>
-      <th>End time</th>
+      <th>Location</th>
+      <th>Available</th>
+      <th>Hours Until Next Meeting</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -31,9 +31,9 @@
     <% @rooms.each do |room| %>
       <tr>
         <td class="well"><%= room.name %></td>
-        <td><%= room.agenda %></td>
-        <td class="well"><%= room.start_time %></td>
-        <td><%= room.end_time %></td>
+        <td><%= room.location %></td>
+        <td class="well"><%= room.available %></td>
+        <td><%= room.hours_until_next_meeting %></td>
         <td class="well"><%= link_to 'Show', room %></td>
         <td><%= link_to 'Edit', edit_room_path(room) %></td>
         <td class="well"><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -69,7 +69,7 @@
             <td><%= link_to room.name, room %></td>
             <td><%= room.location %></td>
             <td><%= room.available %></td>
-            <td><%= room.time_until_next_meeting %></td>
+            <td><%= room.hours_until_next_meeting %></td>
             <td><%= link_to 'Show', room %></td>
             <td><%= link_to 'Edit', edit_room_path(room) %></td>
             <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
