--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,9 +1,10 @@
 <ul class="nav nav-tabs">
   <li role="presentation" class="active"><%= link_to 'Admin Dashboard', dashboard_path %></li>
   <li role="presentation"><a href="/rooms/new">Create a Room</a></li>
+  <li role="presentation"><a href="/admin/dashboard">Update a Room</a></li>
   <li role="presentation"><a href="/meetings/new">Create a new Meeting</a></li>
-  <li role="presentation"><a href="/admin/reports/meetings">Meeting Report</a></li>
-  <li role="presentation"><a href="/admin/reports/rooms">Rooms Report</a></li>
+  <li role="presentation"><a href="/admin/dashboard">Meeting Report</a></li>
+  <li role="presentation"><a href="/admin/dashboard">Rooms Report</a></li>
 </ul>
 
 <div class="container">
