--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,53 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container" style="margin-top:3%">
+  <div class="col-md-5 col-md-offset-4">
+    <div class="panel panel-default">
+      <div class="panel panel-header text-center">
+        <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        </div>
+        <div class="panel-body text-center">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+            <div class="panel panel-default">
+              <div class="panel-body">
 
-  <div class="panel panel-default">
-    <div class="panel-body">
+                <div class="form-inputs">
 
-      <div class="form-inputs">
+                <div class="form-group">
+                  <%= f.label :name %>
+                  <%= f.text_field :name, class: "form-control", :autofocus => true %>
+                </div>
 
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: "form-control", :autofocus => true %>
+                <div class="form-group">
+                  <%= f.label :email %>
+                  <%= f.email_field :email, class: "form-control", :autofocus => true %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
+                  <%= f.password_field :password, class: "form-control", :autocomplete => "off" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+                  <%= f.password_field :current_password, class: "form-control" %>
+                </div>
+
+                </div>
+
+                <div class="form-group">
+                  <%= f.submit "Update", class: "btn btn-primary" %>
+                </div>
+
+              <% end %>
+            </div>
+            <div class="panel-footer">
+
+              <h3>Cancel my account</h3>
+
+              <p>Are you sure that you want to part ways? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %></p>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, class: "form-control", :autofocus => true %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
-        <%= f.password_field :password, class: "form-control", :autocomplete => "off" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
-        <%= f.password_field :current_password, class: "form-control" %>
-      </div>
-
-      </div>
-
-      <div class="form-group">
-        <%= f.submit "Update", class: "btn btn-primary" %>
-      </div>
-
-    <% end %>
-  </div>
-  <div class="panel-footer">
-
-    <h3>Cancel my account</h3>
-
-    <p>You mad bro? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %></p>
-
-  </div>
+    </div>
