added class to search field on index page for meetings

--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-  <div class="row pull-right">
+  <div class="row pull-right margin-top">
     <form action='/search/meetings' method='GET'>
       <input type='text' name='search'/>
       <input type='submit' value='Search' class="btn btn-primary" />
