--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,14 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'scaffolds.scss';
+
 //You need to now manually import every other scss file.
+.center{
+  text-align: center;
+};
+.pull-right{
+  margin-right: 20px;
+};
+.margin-top{
+  margin-top: 15px;
+};
