--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,8 +1,22 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-12">
+    <h2 class="center">All Meetings</h2>
+  <div class="center">
+  <div class="well pull-right">
+    <form action='/search/meetings' method='GET'>
+      <input type='text' name='search'/>
+      <input type='submit' value='Search' class="btn btn-primary" />
+    </form>
+  </div>
+    <%= link_to 'New Meeting', new_meeting_path, class: 'col-md-1 btn btn-info pull-left margin-top' %>
+  </div>
 
-<h1>Listing Meetings</h1>
-
-<table>
+  </div>
+  </div>
+</div>
+<section class='panel panel-default'>
+<table class='table'>
   <thead>
     <tr>
       <th>Title</th>
@@ -16,18 +30,56 @@
   <tbody>
     <% @meetings.each do |meeting| %>
       <tr>
-        <td><%= meeting.title %></td>
+        <td class="well"><%= meeting.title %></td>
         <td><%= meeting.agenda %></td>
-        <td><%= meeting.start_time %></td>
+        <td class="well"><%= meeting.start_time %></td>
         <td><%= meeting.end_time %></td>
-        <td><%= link_to 'Show', meeting %></td>
+        <td class="well"><%= link_to 'Show', meeting %></td>
         <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="well"><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+</section>
+<div class="center">
+  <%= will_paginate @meetings, renderer: BootstrapPagination::Rails %>
+</div>
 <br>
+<div class="container">
+  <div class="row">
+    <p id="notice"><%= notice %></p>
 
-<%= link_to 'New Meeting', new_meeting_path %>
+    <h1>Listing Meetings</h1>
+
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Agenda</th>
+          <th>Start time</th>
+          <th>End time</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @meetings.each do |meeting| %>
+          <tr>
+            <td><%= link_to meeting.title, meeting %></td>
+            <td><%= meeting.agenda %></td>
+            <td><%= meeting.start_time %></td>
+            <td><%= meeting.end_time %></td>
+            <td><%= link_to 'Show', meeting %></td>
+            <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
+            <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <br>
+
+    <%= link_to 'New Meeting', new_meeting_path, class: "btn btn-default" %>
+  </div>
+</div>
