--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,29 +1,32 @@
-<p id="notice"><%= notice %></p>
+<!-- The room show page should display all the current and past meetings for that room.
+It should show the title, and the photo for each room. -->
 
-<p>
-  <strong>Name:</strong>
-  <%= @room.name %>
-</p>
 
-<p>
-  <strong>Max occupancy:</strong>
-  <%= @room.max_occupancy %>
-</p>
+<div class="container">
+  <div class="row">
+    <h2>The <%= @room.name %> Room</h2>
+    <img src="http://cdn.home-designing.com/wp-content/uploads/2009/06/large-meeting-room.jpg">
+    <div class="col-md-6">
+      <h3>Meetings</h3>
+      <% @room.meetings.each do |meeting|%>
+      <ul>
+        <li><%= meeting.title %></li>
 
-<p>
-  <strong>Room number:</strong>
-  <%= @room.room_number %>
-</p>
+      </ul>
+      <% end %>
+    </div>
+    <div class="col-md-6">
+      <h3>Details</h3>
+      <p><strong>Location: </strong> <%= @room.location %></p>
+      <p><strong>Occupancy: </strong><%= @room.max_occupancy %></p>
+      <p><strong>Room Number: </strong><%= @room.room_number%></p>
+    </div>
+  </div>
 
-<p>
-  <strong>Imgurl:</strong>
-  <%= @room.imgurl %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @room.location %>
-</p>
-
-<%= link_to 'Edit', edit_room_path(@room) %> |
-<%= link_to 'Back', rooms_path %>
+  <!-- <div class="row admin">
+    <button class="btn btn-primary">Edit meeting</button>
+    <button class="btn btn-danger">Delete meeting</button>
+  </div>
+  <%= link_to 'Edit', edit_room_path(@room) %> |
+<%= link_to 'Back', rooms_path %> -->
+</div>
