got rid of links in dashboard items

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -6,11 +6,11 @@
   </div>
   <div class="row">
     <div class='col-md-4 col-md-offset-1 panel panel-default'>
-      <div class="panel-heading"><h3 class='panel-title'><%= link_to 'Total Employees', 'employees_path' %></h3></div>
+      <div class="panel-heading"><h3 class='panel-title'>Total Employees</h3></div>
       <div class='panel-body dash-field'><%= @total_employees %></div>
     </div>
     <div class='col-md-4 col-md-offset-1 panel panel-default'>
-      <div class="panel-heading"><h3 class='panel-title'><%= link_to 'Total Rooms', rooms_path %></h3></div>
+      <div class="panel-heading"><h3 class='panel-title'>Total Rooms</h3></div>
       <div class='panel-body dash-field'><%= @total_rooms %></div>
     </div>
   </div>
