updated create room page to align

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import 'admin';
 @import 'dataTables/jquery.dataTables';
 @import 'scaffolds.scss';
-
+@import 'rooms';
 //You need to now manually import every other scss file.
 .center{
   text-align: center;
