--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,7 @@
     <li role="presentation" class="active"><%= link_to 'Admin Dashboard', dashboard_path %></li>
     <li role="presentation"><a href="/rooms/new">Create a Room</a></li>
     <li role="presentation"><a href="/meetings/new">Create a new Meeting</a></li>
-    <li role="presentation"><a href="/admin/dashboard">Meeting Report</a></li>
-    <li role="presentation"><a href="/admin/dashboard">Rooms Report</a></li>
+    <li role="presentation"><a href="/admin">Reports</a></li>
   </ul>
 <% end %>
   <!-- <p class="notice"><%= notice %></p>
