--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -5,21 +5,21 @@
     </div>
   </div>
   <div class="row">
-    <div class='col-md-4 col-md-offset-1 panel panel-default'>
+    <div class='col-md-4 col-md-offset-1 panel panel-default dash-panels'>
       <div class="panel-heading"><h3 class='panel-title'>Total Employees</h3></div>
       <div class='panel-body dash-field'><%= @total_employees %></div>
     </div>
-    <div class='col-md-4 col-md-offset-1 panel panel-default'>
+    <div class='col-md-4 col-md-offset-1 panel panel-default dash-panels'>
       <div class="panel-heading"><h3 class='panel-title'>Total Rooms</h3></div>
       <div class='panel-body dash-field'><%= @total_rooms %></div>
     </div>
   </div>
   <div class='row'>
-  <div class='col-md-4 col-md-offset-1 panel panel-default'>
+  <div class='col-md-4 col-md-offset-1 panel panel-default dash-panels'>
       <div class="panel-heading"><h3 class='panel-title'>Total Meetings Today</h3></div>
       <div class='panel-body dash-field'><%= @today_meetings.count %></div>
     </div>
-    <div class='col-md-4 col-md-offset-1 panel panel-default'>
+    <div class='col-md-4 col-md-offset-1 panel panel-default dash-panels'>
       <div class="panel-heading"><h3 class='panel-title'>All Scheduled Meetings</h3></div>
       <div class='panel-body dash-field'><%= @all_future_meetings.count %></div>
     </div>
