--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,12 +3,12 @@
   <div class="col-md-12">
     <h2 class="center">All Rooms</h2>
   <div class="center">
-<!--   <div class="well pull-right">
+  <div class="well pull-right">
     <form action='/search/rooms' method='GET'>
       <input type='text' name='search'/>
       <input type='submit' value='Search' class="btn btn-primary" />
     </form>
-  </div> -->
+  </div>
     <%= link_to 'New Room', new_room_path, class: 'col-md-1 btn btn-info pull-left margin-top' %>
   </div>
 
