--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,15 +31,15 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/meetings">All Meetings</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Meetings<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/meetings">All Meetings</a></li>
+            <li><a href="/meetings/new">New Meeting</a></li>
+          </ul>
+        </li>
         <li><a href="/rooms">All Rooms</a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Room">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <% if employee_signed_in? %>
           <li><%= link_to 'Log Out', destroy_employee_session_path, :method => :delete %></li>
