--- a/app/views/meeting_mailer/meeting_cancelled.txt.erb
+++ b/app/views/meeting_mailer/meeting_cancelled.txt.erb
@@ -3,7 +3,7 @@ Hello <%=@employee.name%>,
 This email is to inform you that the following meeting has been cancelled:
 
     Title: <%= @meeting.title %>
-    Location: <%= @meeting.location %>
+    Location: <%= @meeting.room.location %>
     Start Time: <%= @meeting.start_time %>
     End Time: <%= @meeting.end_time %>
     Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>)
