--- a/app/views/meeting_mailer/meeting_changed.html.erb
+++ b/app/views/meeting_mailer/meeting_changed.html.erb
@@ -3,16 +3,10 @@
 <p>This email is to inform you that the <strong><%= @meeting.title %></strong> meeting has changed. The meeting details are now as follows:
   <ul>
     <li>Title: <%= @meeting.title %> </li>
-    <li>Location: <%= @meeting.location %> </li>
+    <li>Location: <%= @meeting.room.location %> </li>
     <li>Start Time: <%= @meeting.start_time %> </li>
     <li>End Time: <%= @meeting.end_time %> </li>
     <li>Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>) </li>
-    <li>Attendees:
-      <ol><% @meeting.employees.each do |employee| %>
-        <li><%= employee.name %></li>
-      <% end %>
-      </ol>
-    </li>
   </ul>
 </p>
 <p>Please be sure to arrive on time. Thank you.</p>
