--- a/app/views/meeting_mailer/meeting_changed.txt.erb
+++ b/app/views/meeting_mailer/meeting_changed.txt.erb
@@ -3,14 +3,10 @@ Hello <%=@employee.name%>,
 This email is to inform you that the <%= @meeting.title %> meeting has changed. The meeting details are now as follows:
 
     Title: <%= @meeting.title %>
-    Location: <%= @meeting.location %>
+    Location: <%= @meeting.room.location %>
     Start Time: <%= @meeting.start_time %>
     End Time: <%= @meeting.end_time %>
     Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>)
-    Attendees:
-      <% @meeting.employees.each do |employee| %>
-        <%= employee.name %>
-      <% end %>
 
 
 Please be sure to arrive on time. Thank you.
