--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :agenda %>
   </div>
   <div class="field">
+    <%= f.label :room_id %><br>
+    <%= f.select :room_id, @room_options %>
+  </div>
+  <div class="field">
     <%= f.label :start_time %><br>
     <%= f.datetime_select :start_time %>
   </div>
