--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,11 @@
     </div>
 
     <div class="form-group">
+      <%= f.label :company %><br>
+      <%= f.select :company, Company.all.map { |company| [company.name, company.id] }.sort %>
+    </div>
+
+    <div class="form-group">
       <%= f.button "Sign Up", class: 'btn btn-lg btn-primary btn-md' %>
     </div>
 <% end %>
