--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
 
     <div class="form-group">
       <%= f.label :company %><br>
-      <%= f.select :company, Company.all.map { |company| [company.name, company.id] }.sort %>
+      <%= f.select :company_id, company_dropdown %>
     </div>
 
     <div class="form-group">
