--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,62 +1,15 @@
-<div class="report-inner">
-  <h1>MEETINGS</h1>
-    <table class="report-container">
-      <table id="meetings">
-        <thead>
-          <tr>
-            <th>TITLE</th>
-            <th>AGENDA</th>
-            <th>STARTS</th>
-            <th>FINISHES</th>
-            <th>VISIBILITY</th>
-            <th>ROOM ID</th>
-            <th>HOST</th>
-          </tr>
-        </thead>
+<!-- this page is now two pages:
 
-        <tbody>
-          <tr>
-            <% @meetings.each do |meeting| %>
-            <td><%= meeting.title %></td>
-            <td><%= meeting.agenda %></td>
-            <td><%= meeting.start_time %></td>
-            <td><%= meeting.end_time %></td>
-            <td>PRIVATE</td>
-            <td><%= meeting.room_id %></td>
-            <td><%= meeting.employee_id %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </table>
-</div>
+views/admin/reports-meetings.html.erb
 
-<div class="report-inner">
-  <h1>ROOMS</h1>
-    <table class="report-container">
-      <table id="rooms">
-        <thead>
-          <tr>
-            <th>NAME</th>
-            <th>MAX OCC</th>
-            <th>ROOM NUMBER</th>
-            <th>IMAGE</th>
-            <th>LOCATION</th>
-          </tr>
-        </thead>
+***ROUTE: get 'admin/reports-meetings', to: 'admin#index'
 
-        <tbody>
-          <tr>
-            <% @rooms.each do |room| %>
-            <td><%= room.name %></td>
-            <td><%= room.max_occupancy %></td>
-            <td><%= room.room_number %></td>
-            <td><%= room.imgurl %></td>
-            <td><%= room.location %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </table>
-</div>
+and
 
+views/admin/reports-rooms.html.erb
+
+***ROUTE: get 'admin/reports-rooms', to: 'admin#index'
+
+
+<3, Will :-})
+ -->
