--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -19,7 +19,7 @@
           <th class='well'>Name</th>
           <th>Company</th>
           <th class='well'>Email</th>
-          <th class='well' colspan="3"></th>
+          <th colspan="3"></th>
         </tr>
       </thead>
 
@@ -30,7 +30,7 @@
             <td><%= employee.company.name %></td>
             <td class='well'><%= employee.email %></td>
             <td><%= link_to 'Show', employee %></td>
-            <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td class="well"><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
