added employee index link to navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
           </ul>
         </li>
         <li><a href="/rooms">All Rooms</a></li>
+        <li><a href="/employees">All Employees</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if employee_signed_in? %>
