--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,7 +1,6 @@
 <h2 class="center">Search Results for <i><%= params[:search] %></i></h2>
-<!-- Shows all rooms where name like search params -->
-<% if @room_name.count > 0 %>
-<h3 class="center"><%= @room_name.count %> Room(s) found.</h3>
+<% if @room_results.count > 0 %>
+<h3 class="center"><%= @room_results.count %> Room(s) found.</h3>
   <section class='panel panel-default'>
   <table class='table'>
     <thead>
@@ -15,7 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @room_name.each do |room| %>
+      <% @room_results.each do |room| %>
         <tr>
           <td class="well"><%= room.name %></td>
           <td><%= room.max_occupancy %></td>
@@ -28,74 +27,9 @@
     </tbody>
   </table>
   </section>
-  <div class="center"><%= will_paginate @room_name,
+  <div class="center"><%= will_paginate @room_results,
                         renderer: BootstrapPagination::Rails %></div>
 <% end %>
-<!-- Shows all rooms where occupancy like search results -->
-<% if @room_occupancy.count > 0 %>
-<h3 class="center"><%= @room_occupancy.count %> Room(s) found.</h3>
-  <section class='panel panel-default'>
-  <table class='table'>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Max Occupancy</th>
-        <th>Room Number</th>
-        <th>Image</th>
-        <th>Location</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @room_occupancy.each do |room| %>
-        <tr>
-          <td class="well"><%= room.name %></td>
-          <td><%= room.max_occupancy %></td>
-          <td class="well"><%= room.room_number %></td>
-          <td><%= image_tag(room.imgurl, size: '200x150') %></td>
-          <td class="well"><%= room.location %></td>
-          <td><%= link_to 'Show', room  %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  </section>
-  <div class="center"><%= will_paginate @room_occupancy,
-                        renderer: BootstrapPagination::Rails %></div>
-<% end %>
-<!-- Shows all rooms where location like search results -->
-<% if @room_location.count > 0 %>
-  <h3 class="center"><%= @room_location.count %> Room(s) found.</h3>
-  <section class='panel panel-default'>
-  <table class='table'>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Max Occupancy</th>
-        <th>Room Number</th>
-        <th>Picture</th>
-        <th>Location</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @room_location.each do |room| %>
-        <tr>
-          <td class="well"><%= room.name %></td>
-          <td><%= room.max_occupancy %></td>
-          <td class="well"><%= room.room_number %></td>
-          <td><%= image_tag(room.imgurl, size: '200x150') %></td>
-          <td><%= room.location %></td>
-          <td class="well"><%= link_to 'Show', room %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  </section>
-  <div class="center"><%= will_paginate @room_location,
-                        renderer: BootstrapPagination::Rails %></div>
-<% end %>
-
   <div class="well center">
     <form action='/search/rooms' method='GET'>
       <input type='text' name='search'/>
