--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,21 @@
   font-size: 16px;
 };
 
+.align-right{
+  text-align: right;
+  padding-right: 5px;
+}
+
+.align-left{
+  text-align: left;
+  padding-left: 5px;
+}
+
+// .room-search{
+//   text-align: left;
+//   padding-left: 5px;
+// }
+
 .report-container {
   width: 95%;
   padding: 20px;
