--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -21,6 +21,7 @@
     <tr>
       <th>Name</th>
       <th>Location</th>
+      <th>Amenities</th>
       <th>Available</th>
       <th>Hours Until Next Meeting</th>
       <th colspan="3"></th>
@@ -30,8 +31,9 @@
   <tbody>
     <% @rooms.each do |room| %>
       <tr>
-        <td class="well"><%= room.name %></td>
-        <td><%= room.location %></td>
+        <td><%= room.name %></td>
+        <td class="well"><%= room.location %></td>
+        <td><%= room.amenities.first.perk %></td>
         <td class="well"><%= room.available %></td>
         <td><%= room.hours_until_next_meeting %></td>
         <td class="well"><%= link_to 'Show', room %></td>
